--- a/nginx/roles/web/tasks/main.yml
+++ b/nginx/roles/web/tasks/main.yml
@@ -1,8 +1,10 @@
 ---
-- apt: name={{ item }} state=present
+- name: update cache
+  apt: update_cache=yes
+  
+- name: install nginx
+  apt: name={{ item }} state=present
   with_items:
     - nginx
-
-- service: name={{ item }} state=started enabled=yes
-  with_items:
-    - nginx
+  notify:
+    - restart nginx
