edited firewall: open http port and reload

--- a/nginx/roles/web/handlers/main.yml
+++ b/nginx/roles/web/handlers/main.yml
@@ -1,3 +1,9 @@
 ---
 - name: restart nginx
   service: name=nginx state=restarted
+
+- name: save iptables
+  command: iptables-save
+
+- name: reload firewall
+  command: ufw reload
