--- a/mysql/roles/db/tasks/mysql_secure_installation.yml
+++ b/mysql/roles/db/tasks/mysql_secure_installation.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: add password to root account
-  mysql_user: name=root host={{ item }} password={{ mysql_root_password }} priv=*.*:ALL,GRANT login_user=root log
+  mysql_user: check_implicit_admin=yes name=root host={{ item }} password={{ mysql_root_password }} priv=*.*:ALL,GRANT
   with_items:
     - "{{ inventory_hostname }}"
     - 127.0.0.1
